--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if devour}}Burger time!{{/if}}
+		{{#unless devour}}So nice, eat it twice!!{{else}}Eat it Eat it!{{/unless}}
 	</button>
 
 </li>
